--- a/notebooks/DSBA_6190_Project_4_Serverless_Data_Engineering_Pipeline.ipynb
+++ b/notebooks/DSBA_6190_Project_4_Serverless_Data_Engineering_Pipeline.ipynb
@@ -6,7 +6,7 @@
       "name": "DSBA-6190_Project-4_Serverless-Data-Engineering-Pipeline.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyMi/EOJNkuYL535q2LTqnnQ",
+      "authorship_tag": "ABX9TyNCm6LfsQPvfN0Yg2yCktXn",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -149,7 +149,7 @@
         "colab_type": "text"
       },
       "source": [
-        "Now we verify we can access AWS Credentials"
+        "Now we verify we can access AWS Credentials. We will the AWS credentials from my personal Google Drive and into the appropriate local folder."
       ]
     },
     {
@@ -183,6 +183,16 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "HVIsw1_IUKMD",
+        "colab_type": "text"
+      },
+      "source": [
+        "Establish the source location of the AWS credential file."
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "kUP3ByMqhyWC",
@@ -207,6 +217,16 @@
           ],
           "name": "stdout"
         }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "v2cD_IXUUe4q",
+        "colab_type": "text"
+      },
+      "source": [
+        "Establish the destination of where to copy the AWS credential file."
       ]
     },
     {
@@ -236,6 +256,16 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "71Z_2RKNUoCW",
+        "colab_type": "text"
+      },
+      "source": [
+        "Copy the credentials from the my mounted Google Drive to the local folder."
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "3RDpIO47hS3L",
@@ -249,6 +279,16 @@
       ],
       "execution_count": 0,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "XjxPxcPbUhqL",
+        "colab_type": "text"
+      },
+      "source": [
+        "Verify the credentials were correctly copied."
+      ]
     },
     {
       "cell_type": "code",
@@ -278,72 +318,14 @@
       ]
     },
     {
-      "cell_type": "code",
-      "metadata": {
-        "id": "gx1g0hVMJTvQ",
-        "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 34
-        },
-        "outputId": "2b8318dc-1eb7-429d-f375-d0f631815346"
-      },
-      "source": [
-        "#!/usr/bin/env python3\n",
-        "pwd"
-      ],
-      "execution_count": 46,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "'/content'"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 46
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "A6MjW8_8KJt4",
-        "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 68
-        },
-        "outputId": "f6bbfc79-0152-43d6-b0f2-a9e0f7cb5506"
-      },
-      "source": [
-        "#!/usr/bin/env python3\n",
-        "cat ~/.aws/credentials"
-      ],
-      "execution_count": 47,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "[dsba_6190_proj_4]\r\n",
-            "aws_access_key_id=AKIA2SQTGOBVZDD7VFVL\r\n",
-            "aws_secret_access_key=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"
-          ],
-          "name": "stdout"
-        }
-      ]
-    },
-    {
       "cell_type": "markdown",
       "metadata": {
         "id": "8PsxUy1gFJet",
         "colab_type": "text"
       },
       "source": [
-        "## API Call Test"
+        "## API Call Test\n",
+        "Test that we have access to the AWS function."
       ]
     },
     {
@@ -355,38 +337,38 @@
           "base_uri": "https://localhost:8080/",
           "height": 221
         },
-        "outputId": "819f42d2-4287-44a2-dd55-eea0312a3654"
+        "outputId": "7d075b87-1396-4fbf-9f9c-336a20abdb4a"
       },
       "source": [
         "session = boto3.Session(profile_name='dsba_6190_proj_4')\n",
         "comprehend = session.client(service_name='comprehend', region_name=\"us-east-1\")\n",
-        "text_sample = \"There is smoke in San Francisco and it makes me angry.\"\n",
+        "text_sample = \"I hope I don't have to be quarentined.\"\n",
         "comprehend.detect_sentiment(Text=text_sample, LanguageCode='en')"
       ],
-      "execution_count": 48,
+      "execution_count": 50,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "{'ResponseMetadata': {'HTTPHeaders': {'content-length': '167',\n",
+              "{'ResponseMetadata': {'HTTPHeaders': {'content-length': '163',\n",
               "   'content-type': 'application/x-amz-json-1.1',\n",
-              "   'date': 'Fri, 13 Mar 2020 19:05:43 GMT',\n",
-              "   'x-amzn-requestid': 'a4dc72f6-0a4a-4705-9273-b6036560a5ba'},\n",
+              "   'date': 'Fri, 13 Mar 2020 19:22:12 GMT',\n",
+              "   'x-amzn-requestid': '12e706cf-5dba-47de-b3ca-6db53a0986c7'},\n",
               "  'HTTPStatusCode': 200,\n",
-              "  'RequestId': 'a4dc72f6-0a4a-4705-9273-b6036560a5ba',\n",
+              "  'RequestId': '12e706cf-5dba-47de-b3ca-6db53a0986c7',\n",
               "  'RetryAttempts': 0},\n",
-              " 'Sentiment': 'NEGATIVE',\n",
-              " 'SentimentScore': {'Mixed': 1.0649489468050888e-06,\n",
-              "  'Negative': 0.9839528203010559,\n",
-              "  'Neutral': 0.013296835124492645,\n",
-              "  'Positive': 0.0027493322268128395}}"
+              " 'Sentiment': 'NEUTRAL',\n",
+              " 'SentimentScore': {'Mixed': 1.1915316463273484e-05,\n",
+              "  'Negative': 0.11930244415998459,\n",
+              "  'Neutral': 0.44884905219078064,\n",
+              "  'Positive': 0.4318366050720215}}"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 48
+          "execution_count": 50
         }
       ]
     }
