--- a/notebooks/DSBA_6190_Project_4_Serverless_Data_Engineering_Pipeline.ipynb
+++ b/notebooks/DSBA_6190_Project_4_Serverless_Data_Engineering_Pipeline.ipynb
@@ -6,7 +6,7 @@
       "name": "DSBA-6190_Project-4_Serverless-Data-Engineering-Pipeline.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyNCm6LfsQPvfN0Yg2yCktXn",
+      "authorship_tag": "ABX9TyM5ZBn9LtgXQqvM6yMj+wC8",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -46,16 +46,6 @@
       ]
     },
     {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "hJB_nvPtg7DS",
-        "colab_type": "text"
-      },
-      "source": [
-        "### Boto3"
-      ]
-    },
-    {
       "cell_type": "code",
       "metadata": {
         "id": "xGM8wWbRg5KL",
@@ -63,6 +53,7 @@
         "colab": {}
       },
       "source": [
+        "# Boto3\n",
         "!pip -q install boto3"
       ],
       "execution_count": 0,
