--- a/notebooks/DSBA_6190_Project_4_Serverless_Data_Engineering_Pipeline.ipynb
+++ b/notebooks/DSBA_6190_Project_4_Serverless_Data_Engineering_Pipeline.ipynb
@@ -51,27 +51,14 @@
       "metadata": {
         "id": "xGM8wWbRg5KL",
         "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 51
-        },
-        "outputId": "d703a952-6bcc-4804-ce8e-5671eebf0ba3"
+        "colab": {}
       },
       "source": [
         "# Boto3\n",
         "!pip -q install boto3"
       ],
-      "execution_count": 40,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "\u001b[31mERROR: Could not find a version that satisfies the requirement StringIO (from versions: none)\u001b[0m\n",
-            "\u001b[31mERROR: No matching distribution found for StringIO\u001b[0m\n"
-          ],
-          "name": "stdout"
-        }
-      ]
+      "execution_count": 0,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -134,10 +121,10 @@
       "metadata": {
         "id": "yseGNwBUeibn",
         "colab_type": "code",
-        "outputId": "5edde961-1683-4e6a-8243-8b290d4609d3",
+        "outputId": "eb9f6e64-8894-477a-ba3f-4603a182f627",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 122
+          "height": 34
         }
       },
       "source": [
@@ -148,10 +135,6 @@
         {
           "output_type": "stream",
           "text": [
-            "Go to this URL in a browser: https://accounts.google.com/o/oauth2/auth?client_id=947318989803-6bn6qk8qdgf4n4g3pfee6491hc0brc4i.apps.googleusercontent.com&redirect_uri=urn%3aietf%3awg%3aoauth%3a2.0%3aoob&response_type=code&scope=email%20https%3a%2f%2fwww.googleapis.com%2fauth%2fdocs.test%20https%3a%2f%2fwww.googleapis.com%2fauth%2fdrive%20https%3a%2f%2fwww.googleapis.com%2fauth%2fdrive.photos.readonly%20https%3a%2f%2fwww.googleapis.com%2fauth%2fpeopleapi.readonly\n",
-            "\n",
-            "Enter your authorization code:\n",
-            "··········\n",
             "Mounted at /content/gdrive\n"
           ],
           "name": "stdout"
@@ -173,7 +156,7 @@
       "metadata": {
         "id": "TgYDEP6Qe37G",
         "colab_type": "code",
-        "outputId": "89c7428d-c802-46f5-90c7-d20df23b4dab",
+        "outputId": "d9609fbb-30e5-437e-b39b-139fac625b97",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
@@ -213,7 +196,7 @@
       "metadata": {
         "id": "kUP3ByMqhyWC",
         "colab_type": "code",
-        "outputId": "d74cc61c-e1e0-41dd-a73f-91f878b859e5",
+        "outputId": "34c9c572-4f85-47d2-ef9d-28e1e607283c",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
@@ -250,7 +233,7 @@
       "metadata": {
         "id": "EjiiI6mchFxB",
         "colab_type": "code",
-        "outputId": "e103709a-f872-42a3-9717-93e3dbdcdd8b",
+        "outputId": "a06d85fb-4c2f-40b6-c44a-1cc468a1a68d",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
@@ -311,7 +294,7 @@
       "metadata": {
         "id": "SDldl3MPHjnw",
         "colab_type": "code",
-        "outputId": "0f2fad41-c626-4982-9b74-1e071e012bb2",
+        "outputId": "1cab9210-f2c0-43c4-e355-929913a4936e",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
@@ -373,7 +356,7 @@
       "metadata": {
         "id": "EyCTr44QFJmb",
         "colab_type": "code",
-        "outputId": "449367fd-8ce0-41cf-d24a-abbf28358c4b",
+        "outputId": "7b641841-ed2b-4ea7-d6c3-d6ab4acd8f68",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 221
@@ -392,10 +375,10 @@
             "text/plain": [
               "{'ResponseMetadata': {'HTTPHeaders': {'content-length': '163',\n",
               "   'content-type': 'application/x-amz-json-1.1',\n",
-              "   'date': 'Tue, 17 Mar 2020 00:14:11 GMT',\n",
-              "   'x-amzn-requestid': '49fe4657-0990-4b7a-afdf-511196938e4e'},\n",
+              "   'date': 'Tue, 17 Mar 2020 00:37:23 GMT',\n",
+              "   'x-amzn-requestid': '2cdd058a-9ace-4e42-b6a8-ee6beea2aa33'},\n",
               "  'HTTPStatusCode': 200,\n",
-              "  'RequestId': '49fe4657-0990-4b7a-afdf-511196938e4e',\n",
+              "  'RequestId': '2cdd058a-9ace-4e42-b6a8-ee6beea2aa33',\n",
               "  'RetryAttempts': 0},\n",
               " 'Sentiment': 'NEUTRAL',\n",
               " 'SentimentScore': {'Mixed': 1.1915316463273484e-05,\n",
@@ -442,7 +425,7 @@
       "metadata": {
         "id": "x-9dJtu3GN6O",
         "colab_type": "code",
-        "outputId": "f7323bcd-5032-47bf-bb98-6f03d7677e42",
+        "outputId": "cf1d89e9-c489-41b6-9236-1a4ff172e02c",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
@@ -479,7 +462,7 @@
       "metadata": {
         "id": "Tr4pQIjSI9Zq",
         "colab_type": "code",
-        "outputId": "725328d2-9a08-4502-8886-6df5d417502f",
+        "outputId": "fa7ba18c-3640-4c9d-cfed-67f5efe45d3a",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 119
@@ -529,25 +512,13 @@
       "metadata": {
         "id": "OUr7_vyV94qB",
         "colab_type": "code",
-        "outputId": "18ff198a-0f24-4993-b4fc-0ce6acdab2cd",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 34
-        }
+        "colab": {}
       },
       "source": [
         "!pip -q install wikipedia"
       ],
-      "execution_count": 13,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "  Building wheel for wikipedia (setup.py) ... \u001b[?25l\u001b[?25hdone\n"
-          ],
-          "name": "stdout"
-        }
-      ]
+      "execution_count": 0,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -585,7 +556,7 @@
       "metadata": {
         "id": "BcZl0K-eNhFQ",
         "colab_type": "code",
-        "outputId": "2fc9c4b2-2c2b-4235-e776-45dbf9be5419",
+        "outputId": "bef72277-18b4-42d4-ba19-0cb5de6f673e",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 394
@@ -673,7 +644,7 @@
       "metadata": {
         "id": "4gyc2N03O55V",
         "colab_type": "code",
-        "outputId": "c80fa66a-3dce-42d7-ec7f-751b91c3985f",
+        "outputId": "5eeb3f52-e0d6-4868-95b5-14f36c027711",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 1000
@@ -689,10 +660,10 @@
           "text": [
             "{'ResponseMetadata': {'HTTPHeaders': {'content-length': '162',\n",
             "                                      'content-type': 'application/x-amz-json-1.1',\n",
-            "                                      'date': 'Tue, 17 Mar 2020 00:14:30 GMT',\n",
-            "                                      'x-amzn-requestid': '6832b68e-5d6b-4595-b3ab-ab78d21d967a'},\n",
+            "                                      'date': 'Tue, 17 Mar 2020 00:37:42 GMT',\n",
+            "                                      'x-amzn-requestid': '53599f5c-1b71-4adb-a607-056ab9610f97'},\n",
             "                      'HTTPStatusCode': 200,\n",
-            "                      'RequestId': '6832b68e-5d6b-4595-b3ab-ab78d21d967a',\n",
+            "                      'RequestId': '53599f5c-1b71-4adb-a607-056ab9610f97',\n",
             "                      'RetryAttempts': 0},\n",
             " 'Sentiment': 'NEUTRAL',\n",
             " 'SentimentScore': {'Mixed': 1.324443815065024e-06,\n",
@@ -705,10 +676,10 @@
             "\n",
             "{'ResponseMetadata': {'HTTPHeaders': {'content-length': '165',\n",
             "                                      'content-type': 'application/x-amz-json-1.1',\n",
-            "                                      'date': 'Tue, 17 Mar 2020 00:14:30 GMT',\n",
-            "                                      'x-amzn-requestid': 'a555edb6-106a-4810-bb34-1d1e081a7ce7'},\n",
+            "                                      'date': 'Tue, 17 Mar 2020 00:37:42 GMT',\n",
+            "                                      'x-amzn-requestid': 'd10d43ca-8443-4f52-966f-a7d8f8c4bb9b'},\n",
             "                      'HTTPStatusCode': 200,\n",
-            "                      'RequestId': 'a555edb6-106a-4810-bb34-1d1e081a7ce7',\n",
+            "                      'RequestId': 'd10d43ca-8443-4f52-966f-a7d8f8c4bb9b',\n",
             "                      'RetryAttempts': 0},\n",
             " 'Sentiment': 'NEUTRAL',\n",
             " 'SentimentScore': {'Mixed': 1.0019426781582297e-06,\n",
@@ -721,10 +692,10 @@
             "\n",
             "{'ResponseMetadata': {'HTTPHeaders': {'content-length': '165',\n",
             "                                      'content-type': 'application/x-amz-json-1.1',\n",
-            "                                      'date': 'Tue, 17 Mar 2020 00:14:31 GMT',\n",
-            "                                      'x-amzn-requestid': '2dfd3d01-a5be-40bb-a919-f6a95929368c'},\n",
+            "                                      'date': 'Tue, 17 Mar 2020 00:37:42 GMT',\n",
+            "                                      'x-amzn-requestid': '0077e12f-4c3c-47be-85b7-632a9b7d000d'},\n",
             "                      'HTTPStatusCode': 200,\n",
-            "                      'RequestId': '2dfd3d01-a5be-40bb-a919-f6a95929368c',\n",
+            "                      'RequestId': '0077e12f-4c3c-47be-85b7-632a9b7d000d',\n",
             "                      'RetryAttempts': 0},\n",
             " 'Sentiment': 'NEUTRAL',\n",
             " 'SentimentScore': {'Mixed': 1.4573652151739225e-06,\n",
@@ -737,10 +708,10 @@
             "\n",
             "{'ResponseMetadata': {'HTTPHeaders': {'content-length': '165',\n",
             "                                      'content-type': 'application/x-amz-json-1.1',\n",
-            "                                      'date': 'Tue, 17 Mar 2020 00:14:31 GMT',\n",
-            "                                      'x-amzn-requestid': '3b05dd41-7b17-4d10-a267-306b7b6f945e'},\n",
+            "                                      'date': 'Tue, 17 Mar 2020 00:37:42 GMT',\n",
+            "                                      'x-amzn-requestid': '66d4d6e8-d3f7-4714-92c7-ab66ecde2403'},\n",
             "                      'HTTPStatusCode': 200,\n",
-            "                      'RequestId': '3b05dd41-7b17-4d10-a267-306b7b6f945e',\n",
+            "                      'RequestId': '66d4d6e8-d3f7-4714-92c7-ab66ecde2403',\n",
             "                      'RetryAttempts': 0},\n",
             " 'Sentiment': 'NEUTRAL',\n",
             " 'SentimentScore': {'Mixed': 1.1920977840418345e-06,\n",
@@ -753,10 +724,10 @@
             "\n",
             "{'ResponseMetadata': {'HTTPHeaders': {'content-length': '164',\n",
             "                                      'content-type': 'application/x-amz-json-1.1',\n",
-            "                                      'date': 'Tue, 17 Mar 2020 00:14:31 GMT',\n",
-            "                                      'x-amzn-requestid': 'a8659c37-4e55-485c-944f-91ffefd20ce2'},\n",
+            "                                      'date': 'Tue, 17 Mar 2020 00:37:43 GMT',\n",
+            "                                      'x-amzn-requestid': 'cb8768eb-226b-41da-8d1d-6e8a01b28466'},\n",
             "                      'HTTPStatusCode': 200,\n",
-            "                      'RequestId': 'a8659c37-4e55-485c-944f-91ffefd20ce2',\n",
+            "                      'RequestId': 'cb8768eb-226b-41da-8d1d-6e8a01b28466',\n",
             "                      'RetryAttempts': 0},\n",
             " 'Sentiment': 'NEUTRAL',\n",
             " 'SentimentScore': {'Mixed': 8.174150707418448e-07,\n",
@@ -769,10 +740,10 @@
             "\n",
             "{'ResponseMetadata': {'HTTPHeaders': {'content-length': '163',\n",
             "                                      'content-type': 'application/x-amz-json-1.1',\n",
-            "                                      'date': 'Tue, 17 Mar 2020 00:14:31 GMT',\n",
-            "                                      'x-amzn-requestid': '60c58b9e-3a5b-4325-8a12-5b2be2f49e8a'},\n",
+            "                                      'date': 'Tue, 17 Mar 2020 00:37:43 GMT',\n",
+            "                                      'x-amzn-requestid': '94ee5ac2-c3e8-4aff-a714-d2191a4d5345'},\n",
             "                      'HTTPStatusCode': 200,\n",
-            "                      'RequestId': '60c58b9e-3a5b-4325-8a12-5b2be2f49e8a',\n",
+            "                      'RequestId': '94ee5ac2-c3e8-4aff-a714-d2191a4d5345',\n",
             "                      'RetryAttempts': 0},\n",
             " 'Sentiment': 'NEUTRAL',\n",
             " 'SentimentScore': {'Mixed': 1.131580347646377e-06,\n",
@@ -846,7 +817,7 @@
       "metadata": {
         "id": "24Q-iQ08RK6y",
         "colab_type": "code",
-        "outputId": "ae557e43-1304-4776-f79c-599df10ce24e",
+        "outputId": "f38d0249-f623-41eb-e531-2a8625b28b88",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 1000
@@ -2135,7 +2106,7 @@
       "metadata": {
         "id": "rknkPJ_Jh5-b",
         "colab_type": "code",
-        "outputId": "10a7d163-0b19-451d-e308-42871a706ca7",
+        "outputId": "309624ac-0ad8-4596-ea15-901ed5d3190d",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
@@ -2144,7 +2115,7 @@
       "source": [
         "type(event)"
       ],
-      "execution_count": 80,
+      "execution_count": 25,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2156,7 +2127,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 80
+          "execution_count": 25
         }
       ]
     },
@@ -2187,7 +2158,7 @@
       "metadata": {
         "id": "33TM6oPTgmOF",
         "colab_type": "code",
-        "outputId": "0db51bce-d9f8-490f-92cf-1d85d02dba76",
+        "outputId": "3c19f120-b022-48c3-f406-bc497e94d50a",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 68
@@ -2205,7 +2176,7 @@
         "  race.append(race_name)\n",
         "  print(race)"
       ],
-      "execution_count": 81,
+      "execution_count": 26,
       "outputs": [
         {
           "output_type": "stream",
@@ -2255,7 +2226,7 @@
       "metadata": {
         "id": "I3pNTIl_jQsw",
         "colab_type": "code",
-        "outputId": "64c17293-1c51-49fe-80b8-9d6ae94494c3",
+        "outputId": "f4e5b087-f9fb-4c59-d948-a3374fff2beb",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 119
@@ -2265,7 +2236,7 @@
         "race_dict = races_to_wikipedia(race)\n",
         "pprint.pprint(race_dict)"
       ],
-      "execution_count": 83,
+      "execution_count": 28,
       "outputs": [
         {
           "output_type": "stream",
@@ -2320,7 +2291,7 @@
       "metadata": {
         "id": "uY_mkqFikqkU",
         "colab_type": "code",
-        "outputId": "b7bb2770-e07d-4350-9bcc-278822582c94",
+        "outputId": "66a0184d-3eb7-4086-a58a-ab50818aa364",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 697
@@ -2330,7 +2301,7 @@
         "entity_dict = entity_detect(race_dict)\n",
         "pprint.pprint(entity_dict)"
       ],
-      "execution_count": 85,
+      "execution_count": 30,
       "outputs": [
         {
           "output_type": "stream",
